Closed Bug 567521 Opened 16 years ago Closed 16 years ago

winEmbed can't be built since Apr 29 (Windows XULRunner nightlies missing for mozilla-central)

Categories

(Core Graveyard :: Embedding: MFC Embed, defect)

x86
Windows Server 2003
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: nthomas, Assigned: Mitch)

Details

Attachments

(1 file)

[I really want Core:: Embedding: winEmbed but I trust someone will put this in the right place Somewhere in http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=797e4ee41b51&tochange=c9212eb6175b was a change that caused: link -NOLOGO -OUT:winEmbed.exe -PDB:winEmbed.pdb -NXCOMPAT -DYNAMICBASE -SAFESEH -DEBUG -DEBUGTYPE:CV -MANIFEST:NO -LIBPATH:"e:/builds/moz2_slave/mozilla-central-win32-xulrunner/build/obj-firefox/memory/jemalloc/crtsrc/build/intel" -NODEFAULTLIB:msvcrt -NODEFAULTLIB:msvcrtd -NODEFAULTLIB:msvcprt -NODEFAULTLIB:msvcprtd -DEFAULTLIB:mozcrt19 -DEFAULTLIB:mozcpp19 -DEBUG -OPT:REF /HEAP:0x40000 winEmbed.obj WebBrowserChrome.obj WindowCreator.obj winEmbed.res ../../../profile/dirserviceprovider/standalone/profdirserviceprovidersa_s.lib e:/builds/moz2_slave/mozilla-central-win32-xulrunner/build/obj-firefox/dist/lib/xpcomglue.lib kernel32.lib user32.lib gdi32.lib winmm.lib wsock32.lib advapi32.lib ole32.lib comdlg32.lib shell32.lib version.lib profdirserviceprovidersa_s.lib(nsProfileDirServiceProvider.obj) : error LNK2019: unresolved external symbol "struct already_AddRefed<class nsIObserverService> __cdecl mozilla::services::GetObserverService(void)" (?GetObserverService@services@mozilla@@YA?AU?$already_AddRefed@VnsIObserverService@@@@XZ) referenced in function "public: virtual unsigned int __thiscall nsProfileDirServiceProvider::Shutdown(void)" (?Shutdown@nsProfileDirServiceProvider@@UAEIXZ) winEmbed.exe : fatal error LNK1120: 1 unresolved externals make[5]: Leaving directory `/e/builds/moz2_slave/mozilla-central-win32-xulrunnermake[5]: *** [winEmbed.exe] Error 96 This causes the nightlies for xulrunner to fail on win32. Bug 560095 looks like a likely target.
Attached patch Patch v1Splinter Review
This patch might fix it.
Assignee: nobody → mitchell.field
Status: NEW → ASSIGNED
Attachment #447897 - Flags: review?(gavin.sharp)
(In reply to comment #1) > Created an attachment (id=447897) [details] > Patch v1 > > This patch might fix it.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: