Bug 567521: back out part of patch from bug 560095 (changeset 79cbadb26768) to fix winEmbed bustage

--HG--
extra : rebase_source : 7865ac26aa145ae7d05c0e41bd704dddd2d5aa0a